[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/TierIcons/TierIcon02.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/ShopStatsBackground.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/TierIcons/TierIcon03.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/TierIcons/TierIcon04.png" type="Texture" id=5]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/TierIcons/TierIcon01.png" type="Texture" id=6]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/TierIcons/TierIcon05.png" type="Texture" id=7]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/TierIcons/TierIcon06.png" type="Texture" id=8]
[ext_resource path="res://GameHUDRelated/StatsPanel/ShopPercentStatsPanel.gd" type="Script" id=9]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/ShopStatsBackground_IndBackgroundGlow_Inc.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="ShopPercentStatsPanel" type="MarginContainer"]
margin_right = 190.0
margin_bottom = 15.0
mouse_filter = 2
size_flags_vertical = 10
script = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 192.0
margin_bottom = 15.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 192.0
margin_bottom = 15.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="MainContent" type="HBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 188.0
margin_bottom = 13.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_constants/separation = 0

[node name="Tier01Marginer" type="MarginContainer" parent="MarginContainer/MainContent"]
margin_right = 33.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Tier01BackgroundGlow" type="TextureRect" parent="MarginContainer/MainContent/Tier01Marginer"]
margin_right = 33.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContent/Tier01Marginer"]
margin_right = 33.0
margin_bottom = 11.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_left = 2

[node name="Tier01Container" type="HBoxContainer" parent="MarginContainer/MainContent/Tier01Marginer/MarginContainer"]
margin_left = 2.0
margin_right = 29.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="Tier01Pic" type="TextureRect" parent="MarginContainer/MainContent/Tier01Marginer/MarginContainer/Tier01Container"]
margin_top = 2.0
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 6 )

[node name="Marginer" type="MarginContainer" parent="MarginContainer/MainContent/Tier01Marginer/MarginContainer/Tier01Container"]
margin_left = 11.0
margin_right = 27.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/margin_top = 2

[node name="Tier01Label" type="Label" parent="MarginContainer/MainContent/Tier01Marginer/MarginContainer/Tier01Container/Marginer"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 11.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "100%"
valign = 1

[node name="Tier02Marginer" type="MarginContainer" parent="MarginContainer/MainContent"]
margin_left = 33.0
margin_right = 64.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Tier02BackgroundGlow" type="TextureRect" parent="MarginContainer/MainContent/Tier02Marginer"]
margin_right = 31.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContent/Tier02Marginer"]
margin_right = 31.0
margin_bottom = 11.0
mouse_filter = 2
custom_constants/margin_right = 4

[node name="Tier02Container" type="HBoxContainer" parent="MarginContainer/MainContent/Tier02Marginer/MarginContainer"]
margin_right = 27.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="Tier02Pic" type="TextureRect" parent="MarginContainer/MainContent/Tier02Marginer/MarginContainer/Tier02Container"]
margin_top = 2.0
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 2 )

[node name="Marginer" type="MarginContainer" parent="MarginContainer/MainContent/Tier02Marginer/MarginContainer/Tier02Container"]
margin_left = 11.0
margin_right = 27.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/margin_top = 2

[node name="Tier02Label" type="Label" parent="MarginContainer/MainContent/Tier02Marginer/MarginContainer/Tier02Container/Marginer"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 11.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "100%"
valign = 1

[node name="Tier03Marginer" type="MarginContainer" parent="MarginContainer/MainContent"]
margin_left = 64.0
margin_right = 95.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Tier03BackgroundGlow" type="TextureRect" parent="MarginContainer/MainContent/Tier03Marginer"]
margin_right = 31.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContent/Tier03Marginer"]
margin_right = 31.0
margin_bottom = 11.0
mouse_filter = 2
custom_constants/margin_right = 4

[node name="Tier03Container" type="HBoxContainer" parent="MarginContainer/MainContent/Tier03Marginer/MarginContainer"]
margin_right = 27.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="Tier03Pic" type="TextureRect" parent="MarginContainer/MainContent/Tier03Marginer/MarginContainer/Tier03Container"]
margin_top = 2.0
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 4 )

[node name="Marginer" type="MarginContainer" parent="MarginContainer/MainContent/Tier03Marginer/MarginContainer/Tier03Container"]
margin_left = 11.0
margin_right = 27.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/margin_top = 2

[node name="Tier03Label" type="Label" parent="MarginContainer/MainContent/Tier03Marginer/MarginContainer/Tier03Container/Marginer"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 11.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "100%"
valign = 1

[node name="Tier04Marginer" type="MarginContainer" parent="MarginContainer/MainContent"]
margin_left = 95.0
margin_right = 126.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Tier04BackgroundGlow" type="TextureRect" parent="MarginContainer/MainContent/Tier04Marginer"]
margin_right = 31.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContent/Tier04Marginer"]
margin_right = 31.0
margin_bottom = 11.0
mouse_filter = 2
custom_constants/margin_right = 4

[node name="Tier04Container" type="HBoxContainer" parent="MarginContainer/MainContent/Tier04Marginer/MarginContainer"]
margin_right = 27.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="Tier04Pic" type="TextureRect" parent="MarginContainer/MainContent/Tier04Marginer/MarginContainer/Tier04Container"]
margin_top = 2.0
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 5 )

[node name="Marginer" type="MarginContainer" parent="MarginContainer/MainContent/Tier04Marginer/MarginContainer/Tier04Container"]
margin_left = 11.0
margin_right = 27.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/margin_top = 2

[node name="Tier04Label" type="Label" parent="MarginContainer/MainContent/Tier04Marginer/MarginContainer/Tier04Container/Marginer"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 11.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "100%"
valign = 1

[node name="Tier05Marginer" type="MarginContainer" parent="MarginContainer/MainContent"]
margin_left = 126.0
margin_right = 157.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Tier05BackgroundGlow" type="TextureRect" parent="MarginContainer/MainContent/Tier05Marginer"]
margin_right = 31.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContent/Tier05Marginer"]
margin_right = 31.0
margin_bottom = 11.0
mouse_filter = 2
custom_constants/margin_right = 4

[node name="Tier05Container" type="HBoxContainer" parent="MarginContainer/MainContent/Tier05Marginer/MarginContainer"]
margin_right = 27.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="Tier05Pic" type="TextureRect" parent="MarginContainer/MainContent/Tier05Marginer/MarginContainer/Tier05Container"]
margin_top = 2.0
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 7 )

[node name="Marginer" type="MarginContainer" parent="MarginContainer/MainContent/Tier05Marginer/MarginContainer/Tier05Container"]
margin_left = 11.0
margin_right = 27.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/margin_top = 2

[node name="Tier05Label" type="Label" parent="MarginContainer/MainContent/Tier05Marginer/MarginContainer/Tier05Container/Marginer"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 11.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "100%"
valign = 1

[node name="Tier06Marginer" type="MarginContainer" parent="MarginContainer/MainContent"]
margin_left = 157.0
margin_right = 186.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Tier06BackgroundGlow" type="TextureRect" parent="MarginContainer/MainContent/Tier06Marginer"]
margin_right = 29.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContent/Tier06Marginer"]
margin_right = 29.0
margin_bottom = 11.0
mouse_filter = 2

[node name="Tier06Container" type="HBoxContainer" parent="MarginContainer/MainContent/Tier06Marginer/MarginContainer"]
margin_right = 29.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="Tier06Pic" type="TextureRect" parent="MarginContainer/MainContent/Tier06Marginer/MarginContainer/Tier06Container"]
margin_top = 2.0
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 8 )

[node name="Marginer" type="MarginContainer" parent="MarginContainer/MainContent/Tier06Marginer/MarginContainer/Tier06Container"]
margin_left = 11.0
margin_right = 29.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/margin_right = 2
custom_constants/margin_top = 2

[node name="Tier06Label" type="Label" parent="MarginContainer/MainContent/Tier06Marginer/MarginContainer/Tier06Container/Marginer"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 11.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "100%"
valign = 1
